[feat] Add Buggy Solution